# MongoDB_lab

./: .gitignore  README.MD
python_mongo/: README.md  example.js  example.py  jobs_data.py  main.py  pyproject.toml
web_mongo_app/: README.md  pyproject.toml  server.py
workshop/: query_agg_1_1.js  query_agg_1_2.js  query_aggregate_1.js  query_aggregate_2.js  query_aggregate_3.js  query_aggregate_4.js  query_aggregate_5.js  query_aggregate_6.js  query_samples.js  query_samples_2.js  query_samples_3.js  query_samples_4.js
